@@ -165,7 +165,8 @@ SANITY_UNSUPPORTED=	USE_OPENAL USE_FAM USE_MAKESELF USE_ZIP USE_LHA USE_CMAKE \
 		PYDISTUTILS_AUTOPLIST PYTHON_PY3K_PLIST_HACK PYDISTUTILS_NOEGGINFO \
 		USE_PYTHON_PREFIX USE_BZIP2 USE_XZ USE_PGSQL NEED_ROOT \
 		UNIQUENAME LATEST_LINK
-SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX USE_AUTOTOOLS PLIST_DIRSTRY
+SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX USE_AUTOTOOLS PLIST_DIRSTRY USE_SQLITE \
+			USE_FIREBIRD
 SANITY_NOTNEEDED=	WX_UNICODE
 
 USE_AUTOTOOLS_ALT=	USES=autoreconf and GNU_CONFIGURE=yes
@@ -204,6 +205,8 @@ UNIQUENAME_ALT=		PKGBASE
 LATEST_LINK_ALT=	PKGBASE
 WX_UNICODE_REASON=	Now no-op as only unicode is supported now
 PLIST_DIRSTRY_ALT=	PLIST_DIRS
+USE_SQLITE_ALT=		USES=sqlite
+USE_FIREBIRD_ALT=	USES=firebird
 
 .for a in ${SANITY_DEPRECATED}
 .if defined(${a})
